✨ [74%] feature: no-host region ownership + world-continuity lane + live two-player test series
The decentralization milestone: the validated lane has no host role and a shared
world survives its author.

- World-continuity lane: canonical WorldArchive (identity/genesis travel, private
  key never does), wire tags 51/52 manifest exchange, worker WorldArchiveService
  (SEED/ARCHIVE verbs, seed-on-share + final flush, hot-standby prefetch), client
  rehost-on-disconnect + network-first hostless join; WorldContinuityIT proves
  host-worker-death survival over the real tracker + rendezvous binaries.
- No-host ownership: player↔node announce + deterministic plan broadcast; every
  player's client re-executes + votes for its own FOV region set
  (ClientValidationLane); ActionForward (tag 53) routes captured actions to the
  owning player's node; ownership re-plans on join/leave; ActionForwardIT.
- Live test series (docs/Testing.Live.md): e2e-continuity / e2e-ownership /
  e2e-churn all PASSED with two real clients; play-two.sh manual stack. Ten live
  defects found+fixed (host self-recovery cascade, playerdata loss, dead publish
  wiring, session-auth refusals, piece-plane stall, replan storms, …).
- L-31 regions half: LiveRegionOwnershipProvider retires the UNASSIGNED
  placeholder (live: 14 owned / 896 chunks).
- Also: mc/ join routes + tracker catalog (tags 44/45/49/50), redesigned
  title/multiplayer/create screens, server-dist companion gate, docs reorg
  (README → docs/PROGRESS.md ledger, Tested.md owns the counts).

Gates: 1,015 Java + 144 Rust tests green. Register: L-45/L-47/L-31 RETIRING;
ledger notes updated in the same commit (Task 0 §7).

refs #12 #30 #31 #32 #33

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XF44zGJLQKaUxZT7g4wDf6